# pretix-roomsharing

./: .gitignore  .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: style.yml  tests.yml
pretix_roomsharing/: __init__.py  apps.py  checkoutflow.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
pretix_roomsharing/locale/de_Informal/LC_MESSAGES/: django.po
pretix_roomsharing/migrations/: 0001_initial.py
pretix_roomsharing/templates/pretix_roomsharing/: checkout_confirm.html  checkout_room.html  control_delete.html  control_detail.html  control_list.html  control_order_info.html  control_order_room_change.html  control_stats.html  fragment_roomform.html  order_info.html  order_room_change.html  settings.html
pretix_roomsharing/templatetags/: room_tags.py
