[project]
name = "pretix-roomsharing"
dynamic = ["version"]
description = "Pretix roomsharing allows attendees to setup with which people they'd like to share a room"
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["pretix"]
authors = [
    {name = "Christiaan de Die le Clercq (techwolf12)", email = "contact@techwolf12.nl"},
]
maintainers = [
    {name = "Christiaan de Die le Clercq (techwolf12)", email = "contact@techwolf12.nl"},
]

dependencies = [

]

[project.entry-points."pretix.plugin"]
pretix_roomsharing = "pretix_roomsharing:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/techwolf12/pretix-roomsharing"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_roomsharing.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false